--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+---
+layout:
+---
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,7 +9,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Andrew Aquino</title>
+  <title>Your page title here :)</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -15,9 +19,7 @@
 
   <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link href="http://fonts.googleapis.com/css?family=Raleway:400,300,600,800" rel="stylesheet" type="text/css">
-  <link href='http://fonts.googleapis.com/css?family=Merriweather:300italic,300,700,700italic' rel='stylesheet' type='text/css'>
-  <link href='http://fonts.googleapis.com/css?family=Roboto:500,900,700' rel='stylesheet' type='text/css'>
+  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -25,315 +27,82 @@
   <link rel="stylesheet" href="css/skeleton.css">
   <link rel="stylesheet" href="css/style.css">
 
-  <!-- JS
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-  <script src="js/parallax.js"></script>
-  <script src="js/animation.js"></script>
-  
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="images/favicon.png">
 
 </head>
 <body>
-  <!-- Header / Landing -->
-  <div class="main">
-  
-  <div class="bg"></div>
-  <section id="header">
-    <header class="section">
-        <div class="container">
-          <div class="row">
 
-          </div>
-        </div>
-        <div class="container">
-          <div class="row">
-            <div class="twelve columns landing">
-              <h1>ANDREW AQUINO</h1>
-              <p>Website Still Under Construction</p>
-            </div>
-          </div>
-        </div>
-    </header>
-  </section>
-  <!-- End {Header / Landing} -->    
-  
-  <!-- Menu End -->
-  <!-- About Section -->
-  <section id="about_me">
-  <div class="section intro">
-    <div class="container">
-      <div class="row">
-        <div class="three  columns">
-          <div class= "circle-container">
-          <div class="circle user"></div></div>
-          <div class="title">
-          <h4><strong>ABOUT</strong></h4>
-          <div class="header-line left"></div> 
-          </div>
-        </div>
-        <div class="nine columns">
-          <br>
-          <p>I am a junior computer science engineer intending towards a product design or management internship this upcoming summer. Former Buzzfeed Product Design Intern.
-          </p>
-          <br>
-          <br>
-          <div class="row">
-            <a class="button three columns" href="resume.pdf">Resume</a>
-            <a class="button three columns" href="https://github.com/andjosaquino">Github</a>
-            <a class="button three columns" href="https://medium.com/@andrewaquino">Medium</a>
-          </div>
-          <div class="row">
-            <a class="button three columns" href="https:/behance.net/AndrewAquino">Behance</a>
-            <a class="button three columns" href="https://dribbble.com/andjosaquino">Dribbble</a>
-          </div>
-        </div>
-      </div>
+  <div class="container container--header">
+    <div class="row">
+      <h1 class="text-1 u-bold u-grey-1" style="margin-bottom: 7px">Andrew Aquino</h1>
+      <h2 class="text-2 u-grey-2" style="margin-bottom: 45px">I am a product designer who pretends to be from the west coast, but is actually from Long Island. Currently, I am a Computer Science major at Cornell University and have a pretty bad GPA. Email me at <a class="u-accentColor" href="mailto:aja255@cornell.edu">aja255@cornell.edu</a>.</h2>
+      <ul class="header-links header-links--inline">
+        <li class="text-3 u-grey-3"><a class="u-secondaryColor" href="https://medium.com/@andrewaquino">Medium</a></li>
+        <li class="text-3 u-grey-3"><a class="u-secondaryColor" href="https://github.com/andjosaquino">Github</a></li>
+        <li class="text-3 u-grey-3"><a class="u-secondaryColor" href="https://www.facebook.com/andjosaquino">Facebook</a></li>
+        <li class="text-3 u-grey-3"><a class="u-secondaryColor" href="https://www.instagram.com/andjosaquino/">Instagram</a></li>
+        <li class="text-3 u-grey-3"><a class="u-secondaryColor" href="https://dribbble.com/andjosaquino">Dribbble</a></li>
+        <li class="text-3 u-grey-3"><a class="u-secondaryColor" href="https://www.linkedin.com/in/andjosaquino">LinkedIn</a></li>
+      </ul>
     </div>
   </div>
-  </section>
-  <!-- End {About Section} -->
 
-  <!-- Skills -->
-  <section id="skillset">
-  <div class = "section skills">
-    <div class="container">
-      <div class="row two-row-std">
-        <div class="three columns module">
-            <div class="small-container"><img src="images/skills-ui.png"/></div>
-            <h6><strong>UX/UI</strong></h6>
-        </div>
-        <div class="three columns module">
-<div class="small-container"><img src="images/skills-artdir.png"/></div>
-            <h6><strong>DEVELOPMENT</strong></h6>
-        </div>
-        <div class="three columns module two-row-edge">
-            <div class="small-container">
-            <img src="images/skills-dev.png"/>
-            </div>
-            <h6><strong>ART DIRECTION</strong></h6>
-        </div>
-        <div class="three columns module">
-            <div class="small-container"> <img src="images/skills-marketing.png"/></div>
-            <h6><strong>MARKETING</strong></h6>
-        </div>
-      </div>
-    </div>
-  </div>
-  </section>
-  <!-- End {Skills Section} -->
- 
-
-  <!-- Portfolio -->
-  <section id="work_portfolio">
-  <div class="section portfolio">
-    <div class="container">
-      <div class="row">
-        <div class="twelve columns">
-          <h4 style="text-align: center"><strong>PORTFOLIO</strong></h4>
-          <div class="header-line"></div>
-          <h3 style="text-align: center">Contact me for my private portfolio</h3>
-          <div class="center">
-          <br>
-          <a class="button" href="https://www.dropbox.com/sh/hkhqojtg47pi42a/AABZGE3YHEfd3oN7AVOKYs1ga?dl=0">Extended Portfolio</a>
-          </div>
-        </div>
-      </div>
-    </div>
-    <br><br><br>
-    <div class="container portfolio gallery">
-        <ul class="full-width-grid">
-          <li>
-            <a href="http://www.cornellthetatau.com/"><img src="images/placeholder13.png" /></a>
-            <div class="portfolio-title">
-            <h4><strong>THETA TAU WEBSITE</strong></h4>
-            <h3>Responsive Web Design</h3>
-            </div>
-          </li>
-          <li>
-            <a href="https://www.behance.net/gallery/26683665/Tinder-inspired-User-Interface"><img src="images/placeholder12.png" /></a>
-            <div class="portfolio-title">
-            <h4><strong>TINDER-LIKE INTERFACE</strong></h4>
-            <h3>User Interface Design</h3>
-            </div>
-          </li>
-          <li>
-            <a href="https://www.behance.net/gallery/29330687/Cornell-Theta-Tau-Marketing"><img src="images/placeholder11.png" /></a>
-            <div class="portfolio-title">
-            <h4><strong>THETA TAU MARKETING</strong></h4>
-            <h3>Marketing</h3>
-            </div>
-          </li>
-          <li>
-            <a href="https://www.behance.net/gallery/24888061/Cornell-App-Development-Spring-2015"><img src="images/placeholder10.png" /></a>
-            <div class="portfolio-title">
-            <h4><strong>CORNELL APP DEVELOPMENT</strong></h4>
-            <h3>UI/UX, Application Design</h3>
-            </div>
-          </li>
-          <li>
-            <a href="https://www.behance.net/gallery/24703375/Dispossessed-Concept-Art"><img src="images/placeholder9.png" /></a>
-            <div class="portfolio-title">
-            <h4><strong>DISPOSSESSED</strong></h4>
-            <h3>Design / Programming / Project Manager</h3>
-            </div>
-          </li>
-          <li>
-            <a href="https://www.behance.net/gallery/24885517/Website-Design-2014-2015"><img src="images/placeholder.png" /></a>
-            <div class="portfolio-title">
-            <h4><strong>WEBSITE DESIGN 2014-2015</strong></h4>
-            <h3>Website Design, UI/UX</h3>
-            </div>
-          </li>
-         <li>
-            <a href="https://www.behance.net/gallery/24886279/BreakFree-Showcase-2015-Millennials?"><img src="images/placeholder5.png" /></a>
-            <div class="portfolio-title">
-            <h4><strong>MILLENIALS SHOWCASE</strong></h4>
-            <h3>Art Direction</h3>
-            </div>
-          </li>
-          <li>
-            <a href="https://www.behance.net/gallery/24885939/Frucket-Branding-UXUI"><img src="images/placeholder3.png" /></a>
-            <div class="portfolio-title">
-            <h4><strong>FRUCKET UX/UI</strong></h4>
-            <h3>Design</h3>
-            </div> 
-          </li>
-          <li>
-            <a href="https://github.com/andjosaquino/Gnomenwald-Project"><img src="images/placeholder8.png" /></a>
-            <div class="portfolio-title">
-            <h4><strong>GNOMENWALD PROJECT</strong></h4>
-            <h3>Object-Oriented Programming & Swing UI</h3>
-            </div>
-          </li>
-          <li>
-            <a href="https://www.behance.net/gallery/23078929/Logo-Design-2007-2013?"><img src="images/placeholder6.png" /></a>
-            <div class="portfolio-title">
-            <h4><strong>LOGO DESIGN 2007-2013</strong></h4>
-            <h3>Vector Illustration & Branding</h3>
-            </div>
-          </li>
-          <li>
-            <a href="https://www.behance.net/gallery/17679387/Photorealistic-Portraiture"><img src="images/placeholder7.png" /></a>
-            <div class="portfolio-title">
-            <h4><strong>GRAPHITE PORTRAITURE</strong></h4>
-            <h3>Fine Arts</h3>
-            </div>
-          </li>
-        </ul>
-
-      </div>
-      </div>
-   </section>
-  <!-- End {Portfolio Header} -->
-
-   <section id="contact_me">
-    <div class="section contact">
-    <div class="container">
-      <div class="row">
-        <div class="four columns side-contact">
-           <h4><strong>SAY HI!</strong></h4>
-           <div class="header-line left"></div>
-             <br>
-              <h3>If you would like to assist me in my 100 year battle with my college loan, feel free to start a project with me! Otherwise, feel free to introduce yourself.</h3><br>
-          <h6>e: aja255@cornell.edu<br>t: 1 516 754 4041</h6>
-        </div>
-        <div class="seven offset-by-one columns">
-          <form action="http://formspree.io/aja255@cornell.edu" method="POST">          <!--Contact // Email Form-->
-          <input class="u-full-width" type="text" placeholder="NAME" id="exampleEmailInput" name="name"><br>
-          <input class="u-full-width" type="email" placeholder="EMAIL" name="_replyto" id="exampleEmailInput"><br><br>
-          <!--Contact // Submit Button-->
-          <textarea class="u-full-width" placeholder="MESSAGE" id="exampleMessage" name="body"></textarea><br>
-          <input class="button-primary u-full-width" type="submit" value="SUBMIT">
-          </form>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- End {Contact Form} -->
- </section>
-  
-    <!-- Contact Header -->
- <script src='https://maps.googleapis.com/maps/api/js?key=AIzaSyB22OzX8wLFTwdD9qpzT8KumiyRSjSZZTA&sensor=false&extension=.js'></script> 
- 
-<script> 
-    google.maps.event.addDomListener(window, 'load', init);
-    var map;
-
-  
-    function init() {
-        var mapOptions = {
-            center: new google.maps.LatLng(42.448277,-76.484229),
-            zoom: 14,
-            zoomControl: false,
-            zoomControlOptions: {
-                style: google.maps.ZoomControlStyle.DEFAULT,
-            },
-            disableDoubleClickZoom: false,
-            mapTypeControl: false,
-            mapTypeControlOptions: {
-                style: google.maps.MapTypeControlStyle.HORIZONTAL_BAR,
-            },
-            scaleControl: false,
-            scrollwheel: false,
-            panControl: false,
-            streetViewControl: false,
-            draggable : false,
-            overviewMapControl: false,
-            overviewMapControlOptions: {
-                opened: false,
-            },
-            mapTypeId: google.maps.MapTypeId.ROADMAP,
-            styles:[{"featureType":"water","elementType":"geometry","stylers":[{"color":"#000000"},{"lightness":16}]},  {"featureType":"landscape","elementType":"geometry","stylers":[{"color":"#000000"},{"lightness":20}]},{"featureType":"road.highway","elementType":"geometry.fill","stylers":[{"color":"#000000"},{"lightness":17}]},{"featureType":"road.highway","elementType":"geometry.stroke","stylers":[{"color":"#000000"},{"lightness":29},{"weight":0.2}]},{"featureType":"road.arterial","elementType":"geometry","stylers":[{"color":"#000000"},{"lightness":18}]},{"featureType":"road.local","elementType":"geometry","stylers":[{"color":"#000000"},{"lightness":13}]},{"featureType":"poi","elementType":"geometry","stylers":[{"color":"#000000"},{"lightness":21}]},{"elementType":"labels.text.stroke","stylers":[{"visibility":"on"},{"color":"#000000"},{"lightness":16}]},{"elementType":"labels.text.fill","stylers":[{"saturation":36},{"color":"#000000"},{"lightness":40}]},{"elementType":"labels.icon","stylers":[{"visibility":"off"}]},{"featureType":"transit","elementType":"geometry","stylers":[{"color":"#000000"},{"lightness":19}]},{"featureType":"administrative","elementType":"geometry.fill","stylers":[{"color":"#000000"},{"lightness":20}]},{"featureType":"administrative","elementType":"geometry.stroke","stylers":[{"color":"#000000"},{"lightness":17},{"weight":1.2}]}],
-        }
-        var mapElement = document.getElementById('school');
-        var map = new google.maps.Map(mapElement, mapOptions);
-        var image = 'images/marker.png';
-        var myLatLng = new google.maps.LatLng(42.448277,-76.484229);
-        var beachMarker = new google.maps.Marker({
-            position: myLatLng,
-            map: map,
-            icon: image
-  });
-
-}
-</script>
-<style>
-    #school {
-        height:400px;
-        width:100%;
-    }
-    .gm-style-iw * {
-        display: block;
-        width: 100%;
-    }
-    .gm-style-iw h4, .gm-style-iw p {
-        margin: 0;
-        padding: 0;
-    }
-    .gm-style-iw a {
-        color: #4272db;
-    }
-</style>
-
-<div id='school'></div>      
-       
-<footer>
-  <div class="container">
-      <div class="row">
-        <div class="five columns">
-          <h6 class="footer-text">© 2015 | ANDREW AQUINO</h6>
-        </div>
-      </div>
-  </div>
-</footer>
-
- <!-- End Document
+  <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-</div>
+  <div class="section-work" style="background-color:#FAFAFA">
+    <div class="container">
+      <div class="row">
+        <div id="work" class="twelve column">
+          {% for post in site.posts %}
+            <div class="row card">
+              <div class="five columns">
+                <p>
+                  <span class="u-bold">{{ post.company }}</span> · {{post.role}}
+                </p>
+                <p class="u-grey-3"  style="margin-bottom: 45px">{{ post.period }}
+                </p>
+              </div>
+              <div class="six offset-by-one columns" >
+                <p class="u-grey-2">{{ post.description }}</p>
+              </div>
+            </div>
+          {% endfor %}
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="twelve column">
+          <div class="row card">
+            <div class="five columns">
+              <p class="u-grey-3"  style="margin-bottom: 45px">If you’re looking to connect, feel free to contact me at <a class="u-accentColor" href="mailto:aja255@cornell.edu">aja255@cornell.edu</a></p>
+              </p>
+            </div>
+            <div class="six offset-by-one columns">
+              <div class="row">
+                <ul class="footer-links four columns" style="margin-bottom:0">
+                    <li class="text-3 u-grey-3"><a href="https://medium.com/@andrewaquino">Medium</a></li>
+                    <li class="text-3 u-grey-3"><a href="https://github.com/andjosaquino">Github</a></li>
+                    <li class="text-3 u-grey-3"><a href="https://www.facebook.com/andjosaquino">Facebook</a></li>
+                </ul>
+                <ul class="footer-links four columns" style="margin-bottom:0">
+                  <li class="text-3 u-grey-3"><a href="https://www.instagram.com/andjosaquino/">Instagram</a></li>
+                  <li class="text-3 u-grey-3"><a href="https://dribbble.com/andjosaquino">Dribbble</a></li>
+                  <li class="text-3 u-grey-3"><a href="https://www.linkedin.com/in/andjosaquino">LinkedIn</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+<!-- End Document
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </body>
 </html>
-
-
